fix 100vh on mobile

--- a/css/body.css
+++ b/css/body.css
@@ -1,7 +1,11 @@
+:root {
+    --vh: 1vh;
+}
+
 body {
     margin: 0;
     width: 100vw;
-    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
 
     display: flex;
     flex-direction: column;
@@ -12,6 +16,15 @@ body {
 
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     color: var(--primary-text);
+
+    overflow: hidden;
+}
+
+.body-content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 
     overflow: hidden;
 }
